Bug 275926 - System Load Viewer changes size
Summary: System Load Viewer changes size
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-systemmonitor (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Matthew Dawson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-17 18:31 UTC by Ray
Modified: 2011-11-13 04:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ray 2011-06-17 18:31:11 UTC
Version:           unspecified (using KDE 4.6.3) 
OS:                Linux

The System Load Viewer widget changes size every few seconds, causing other panel components to be moved and redrawn (which is quite distracting).  It appears as though the memory bar may be disappearing (and, therefore, this may be related to bug #272830).  I have it configured to show all CPUs on a dual core machine (although the problem happens either way).


Reproducible: Always

Steps to Reproduce:
just add it to the panel




KDE 4.6.3 on Fedora 15; kernel 2.6.38.8-32.fc15.x86_64
Comment 1 sleonard 2011-10-05 17:20:58 UTC
This is slowly driving insane too. It only happens on my x86_64 system. My 32 bits F15 is fine.

$ kwin -v
Qt: 4.7.4
KDE Development Platform: 4.6.5 (4.6.5)
KWin: 4.6.5 (4.6.5)
Comment 2 Matthew Dawson 2011-11-06 06:52:36 UTC
Thanks for reporting this bug.  When this issue occurs, do you have any swap space enabled on your machine?  Also, do you have the exact same symptoms as described in the bug #272830 ?
Comment 3 Matthew Dawson 2011-11-13 04:28:03 UTC
Git commit 704bc595ccaa0d433eac825a541b2a053c60c7fc by Matthew Dawson.
Committed on 13/11/2011 at 05:10.
Pushed by mdawson into branch 'KDE/4.7'.

Make the swap disappearing issue more robust.

Before there was some questionable logic surrounding the swap detection
code.  Make this logic more understandable and robust.  This should fix
random resizes that occur for some people.
BUG: 275926
FIXED-IN: 4.7.4

M  +12   -7    applets/systemloadviewer/systemloadviewer.cpp

http://commits.kde.org/kdeplasma-addons/704bc595ccaa0d433eac825a541b2a053c60c7fc
Comment 4 Matthew Dawson 2011-11-13 04:28:06 UTC
Git commit 2b1aa5e83db8949a7766e81d89963213e2093e4b by Matthew Dawson.
Committed on 13/11/2011 at 05:10.
Pushed by mdawson into branch 'master'.

Make the swap disappearing issue more robust.

Before there was some questionable logic surrounding the swap detection
code.  Make this logic more understandable and robust.  This should fix
random resizes that occur for some people.
BUG: 275926
FIXED-IN: 4.8.0

M  +12   -7    applets/systemloadviewer/systemloadviewer.cpp

http://commits.kde.org/kdeplasma-addons/2b1aa5e83db8949a7766e81d89963213e2093e4b