Make the swap disappearing issue more robust.

Before there was some questionable logic surrounding the swap detection
code.  Make this logic more understandable and robust.  This should fix
random resizes that occur for some people.
BUG: 275926
FIXED-IN: 4.8.0